--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -939,7 +939,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
       </tbody>
     </table>
     <div style="font-size:0.85rem; color:#555; margin-top:6px;">
-      Fonte: Fulvio&nbsp;et&nbsp;al., <em>Spectrochimica Acta Part A</em> 72 (2009) 1007–1013 (Tabela&nbsp;3). :contentReference[oaicite:0]{index=0}
+      Fonte: Fulvio&nbsp;et&nbsp;al., <em>Spectrochimica Acta Part A</em> 72 (2009) 1007–1013 (Tabela&nbsp;3). 
     </div>
   </figure>
 
