--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -795,207 +795,195 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 
 
+
+
+
 <!-- ===================== RESPOSTA 3.1 — Identificação dos picos, atribuições e contaminantes ===================== -->
 <div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
 
   <h4 style="margin:0 0 10px 0;">Resposta 3.1 — Identificação no OMNIC + atribuições e contaminantes</h4>
 
-  <!-- Grade com viewers PDF.js (sem <script>, 2 fileiras no desktop) -->
-<div style="
-  display:grid;
-  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
-  gap:14px;
-  align-items:start;
-">
+  <!-- Grade com viewers PDF.js + cabeçalhos (2 fileiras no desktop) -->
+  <div style="
+    display:grid;
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+    gap:14px;
+    align-items:start;
+  ">
 
-<!-- Grade com viewers PDF.js + cabeçalhos -->
-<div style="
-  display:grid;
-  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
-  gap:14px;
-  align-items:start;
-">
-
-  <!-- 589 cm⁻1 -->
-  <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-    <div style="padding:10px;">
-      <div style="font-weight:600; font-size:15px;">589 cm⁻¹ — ν₂ (N₂O)</div>
-      <div style="font-size:12px; color:#555;">Janela 580–592</div>
+    <!-- 589 cm⁻1 -->
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">589 cm⁻¹ — ν₂ (N₂O)</div>
+        <div style="font-size:12px; color:#555;">Janela 580–592</div>
+      </div>
+      <iframe
+        style="width:100%; height:340px; border:0;"
+        title="3_589cm.pdf"
+        src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_589cm.pdf#zoom=page-fit&toolbar=0">
+      </iframe>
     </div>
-    <iframe
-      style="width:100%; height:340px; border:0;"
-      title="3_589cm.pdf"
-      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_589cm.pdf#zoom=page-fit&toolbar=0">
-    </iframe>
-  </div>
 
-  <!-- 1166 cm⁻1 -->
-  <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-    <div style="padding:10px;">
-      <div style="font-weight:600; font-size:15px;">1166 cm⁻¹ — 2ν₂ (N₂O)</div>
-      <div style="font-size:12px; color:#555;">Janela 1155–1178</div>
+    <!-- 1166 cm⁻1 -->
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">1166 cm⁻¹ — 2ν₂ (N₂O)</div>
+        <div style="font-size:12px; color:#555;">Janela 1155–1178</div>
+      </div>
+      <iframe
+        style="width:100%; height:340px; border:0;"
+        title="3_1166cm.pdf"
+        src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_1166cm.pdf#zoom=page-fit&toolbar=0">
+      </iframe>
     </div>
-    <iframe
-      style="width:100%; height:340px; border:0;"
-      title="3_1166cm.pdf"
-      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_1166cm.pdf#zoom=page-fit&toolbar=0">
-    </iframe>
-  </div>
 
-  <!-- 1295 cm⁻1 -->
-  <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-    <div style="padding:10px;">
-      <div style="font-weight:600; font-size:15px;">1295 cm⁻¹ — ν₁ (N–N, N₂O)</div>
-      <div style="font-size:12px; color:#555;">Janela 1280–1305</div>
+    <!-- 1295 cm⁻1 -->
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">1295 cm⁻¹ — ν₁ (N–N, N₂O)</div>
+        <div style="font-size:12px; color:#555;">Janela 1280–1305</div>
+      </div>
+      <iframe
+        style="width:100%; height:340px; border:0;"
+        title="3_1295cm.pdf"
+        src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_1295cm.pdf#zoom=page-fit&toolbar=0">
+      </iframe>
     </div>
-    <iframe
-      style="width:100%; height:340px; border:0;"
-      title="3_1295cm.pdf"
-      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_1295cm.pdf#zoom=page-fit&toolbar=0">
-    </iframe>
-  </div>
 
-  <!-- 2239 cm⁻1 -->
-  <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-    <div style="padding:10px;">
-      <div style="font-weight:600; font-size:15px;">2239 cm⁻¹ — ν₃ (anti-sim., N₂O)</div>
-      <div style="font-size:12px; color:#555;">Janela 2224–2243</div>
+    <!-- 2239 cm⁻1 -->
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">2239 cm⁻¹ — ν₃ (anti-sim., N₂O)</div>
+        <div style="font-size:12px; color:#555;">Janela 2224–2243</div>
+      </div>
+      <iframe
+        style="width:100%; height:340px; border:0;"
+        title="3_2239cm.pdf"
+        src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_2239cm.pdf#zoom=page-fit&toolbar=0">
+      </iframe>
     </div>
-    <iframe
-      style="width:100%; height:340px; border:0;"
-      title="3_2239cm.pdf"
-      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_2239cm.pdf#zoom=page-fit&toolbar=0">
-    </iframe>
-  </div>
 
-  <!-- 2581 cm⁻1 -->
-  <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-    <div style="padding:10px;">
-      <div style="font-weight:600; font-size:15px;">2581 cm⁻¹ — 2ν₁ / ν₁+ν₂ (N₂O)</div>
-      <div style="font-size:12px; color:#555;">Janela 2565–2600</div>
+    <!-- 2581 cm⁻1 -->
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">2581 cm⁻¹ — 2ν₁ / ν₁+ν₂ (N₂O)</div>
+        <div style="font-size:12px; color:#555;">Janela 2565–2600</div>
+      </div>
+      <iframe
+        style="width:100%; height:340px; border:0;"
+        title="3_2581cm.pdf"
+        src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_2581cm.pdf#zoom=page-fit&toolbar=0">
+      </iframe>
     </div>
-    <iframe
-      style="width:100%; height:340px; border:0;"
-      title="3_2581cm.pdf"
-      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_2581cm.pdf#zoom=page-fit&toolbar=0">
-    </iframe>
-  </div>
 
-  <!-- 3380 cm⁻1 -->
-  <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-    <div style="padding:10px;">
-      <div style="font-weight:600; font-size:15px;">3380 cm⁻¹ — O–H (H₂O, amorfa)</div>
-      <div style="font-size:12px; color:#555;">Janela 3376–3382</div>
+    <!-- 3380 cm⁻1 -->
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">3380 cm⁻¹ — O–H (H₂O, amorfa)</div>
+        <div style="font-size:12px; color:#555;">Janela 3376–3382</div>
+      </div>
+      <iframe
+        style="width:100%; height:340px; border:0;"
+        title="3_3380cm.pdf"
+        src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_3380cm.pdf#zoom=page-fit&toolbar=0">
+      </iframe>
     </div>
-    <iframe
-      style="width:100%; height:340px; border:0;"
-      title="3_3380cm.pdf"
-      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_3380cm.pdf#zoom=page-fit&toolbar=0">
-    </iframe>
-  </div>
 
-  <!-- 3706 cm⁻1 -->
-  <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
-    <div style="padding:10px;">
-      <div style="font-weight:600; font-size:15px;">3706 cm⁻¹ — O–H “dangling bond” (superfície)</div>
-      <div style="font-size:12px; color:#555;">Janela 3706.5–3704.5</div>
+    <!-- 3706 cm⁻1 -->
+    <div style="border:1px solid #ddd; border-radius:8px; overflow:hidden; background:#fff;">
+      <div style="padding:10px;">
+        <div style="font-weight:600; font-size:15px;">3706 cm⁻¹ — O–H “dangling bond” (superfície)</div>
+        <div style="font-size:12px; color:#555;">Janela 3706.5–3704.5</div>
+      </div>
+      <iframe
+        style="width:100%; height:340px; border:0;"
+        title="3_3706cm.pdf"
+        src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_3706cm.pdf#zoom=page-fit&toolbar=0">
+      </iframe>
     </div>
-    <iframe
-      style="width:100%; height:340px; border:0;"
-      title="3_3706cm.pdf"
-      src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https%3A%2F%2Fraw.githubusercontent.com%2Fthallescotta%2Finstrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2%2Fmain%2Fgif%2F3_3706cm.pdf#zoom=page-fit&toolbar=0">
-    </iframe>
-  </div>
 
-</div>
+  </div> <!-- /grid -->
 
+  <!-- Resumo 3.1 com Tabela 3 (Fulvio 2009) -->
+  <div class="muted" style="margin-top:10px; text-align:justify; font-size:0.92rem;">
 
+    <strong>Resumo 3.1 (com conferência em Fulvio&nbsp;2009 — Tabela&nbsp;3):</strong><br>
+    Do conjunto pedido (589, 1166, 1295, 2239, 2581, 3380, 3706&nbsp;cm⁻¹), os picos
+    <u>1166, 1295, 2239 e 2581&nbsp;cm⁻¹</u> constam na Tabela&nbsp;3 para N₂O sólido (16&nbsp;K).
+    Já <u>589&nbsp;cm⁻¹</u> não aparece na Tabela&nbsp;3, e <u>3380/3706&nbsp;cm⁻¹</u> não são de N₂O:
+    tratam-se de O–H de H₂O (contaminante), devendo ser referenciadas por literatura
+    específica de gelo d’água.
 
+    <!-- Tabela 3 (Fulvio 2009) reformatada — alinhamento à esquerda -->
+    <figure style="margin:10px 0; text-align:left;">
+      <figcaption style="font-size:0.9rem; margin-bottom:6px; text-align:left;">
+        <em>Fulvio&nbsp;2009, Tabela&nbsp;3 — Posições de pico no infravermelho do N₂O sólido (16&nbsp;K) e atribuições de modo.</em>
+      </figcaption>
+      <table border="1" cellpadding="6" style="border-collapse:collapse; width:auto; font-size:0.92rem;">
+        <thead style="background:#f5f5f5;">
+          <tr>
+            <th style="text-align:left; width:40%;">Número de onda (cm⁻¹)</th>
+            <th style="text-align:left;">Modo</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>1166</td><td>2ν₂</td></tr>
+          <tr><td>1295</td><td>ν₁</td></tr>
+          <tr><td>2239</td><td>ν₃</td></tr>
+          <tr><td>2469</td><td>ν₁ + 2ν₂</td></tr>
+          <tr><td>2581</td><td>2ν₁</td></tr>
+          <tr><td>2814</td><td>ν₂ + ν₃</td></tr>
+        </tbody>
+      </table>
+      <div style="font-size:0.85rem; color:#555; margin-top:6px; text-align:left;">
+        Fonte: Fulvio&nbsp;et&nbsp;al., <em>Spectrochimica Acta Part A</em> 72 (2009) 1007–1013 (Tabela&nbsp;3).
+      </div>
+    </figure>
 
+    <!-- Fechamento 3.1 — com literatura para as bandas fora da Tabela 3 -->
+    <p style="margin-top:8px; text-align:justify;">
+      Assim, nesta amostra não irradiada, os picos “pai” confirmados para N₂O pela Tabela&nbsp;3 de Fulvio&nbsp;(2009) são:
+      <strong>1166</strong> (2ν₂), <strong>1295</strong> (ν₁), <strong>2239</strong> (ν₃) e <strong>2581</strong> (2ν₁) cm⁻¹.
+      As bandas restantes exigem literatura complementar: <strong>589&nbsp;cm⁻¹</strong> é o modo de <em>flexão</em> (ν₂) do N₂O
+      (fora do escopo da Tabela&nbsp;3 de Fulvio), e <strong>3380</strong>/<strong>3706&nbsp;cm⁻¹</strong> correspondem a O–H de
+      H₂O <em>contaminante</em> — respectivamente, a larga banda de estiramento do gelo amorfo (~3200–3400&nbsp;cm⁻¹) e o O–H “livre”
+      (<em>dangling</em>) de superfície (~3696–3720&nbsp;cm⁻¹), ambos amplamente reportados na literatura de gelo de água.
+    </p>
 
+    <!-- Referências (com links) -->
+    <ul class="muted" style="margin:6px 0 0 18px; font-size:0.9rem; text-align:left;">
+      <li>
+        <strong>Fulvio, D. et al., 2009</strong> — N₂O sólido (16&nbsp;K): índices, densidade e <em>band strengths</em>;
+        Tabela&nbsp;3 (1166/1295/2239/2581 cm⁻¹).
+        <a href="https://jupiter.chem.uoa.gr/thanost/papers/papers1/SpectrochimActaA_72%282009%291007.pdf" target="_blank" rel="noopener">PDF</a> ·
+        <a href="https://doi.org/10.1016/j.saa.2008.12.030" target="_blank" rel="noopener">DOI: 10.1016/j.saa.2008.12.030</a>
+      </li>
+      <li>
+        <strong>Plyler, E.K.; Tidwell, E.D.; Maki, A.G., 1964</strong> — Espectro IR do N₂O; ν₂ (flexão) ≈ 588.78&nbsp;cm⁻¹.
+        <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC5325172/" target="_blank" rel="noopener">Acesso livre (NIST/PMC)</a>
+      </li>
+      <li>
+        <strong>Buch, V.; Devlin, J.P., 1991</strong> — O–H “dangling” em gelo amorfo (~3.70&nbsp;µm).
+        <a href="https://ui.adsabs.harvard.edu/abs/1991JChPh..94.4091B/abstract" target="_blank" rel="noopener">Resumo (ADS)</a>
+      </li>
+      <li>
+        <strong>Maté, B. et al., 2021</strong> — Bandas “dangling” &gt;3600&nbsp;cm⁻¹ em misturas CH₄/H₂O.
+        <a href="https://pubs.rsc.org/en/content/articlehtml/2021/cp/d1cp00291k" target="_blank" rel="noopener">RSC (artigo)</a>
+      </li>
+      <li>
+        <strong>Ikemoto, Y. et al., 2022</strong> — Distribuição do estiramento O–H (~3650–3200&nbsp;cm⁻¹) e configuração HB.
+        <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC9189834/" target="_blank" rel="noopener">Acesso livre (PMC)</a> ·
+        <a href="https://doi.org/10.1021/acs.jpcb.2c01702" target="_blank" rel="noopener">DOI: 10.1021/acs.jpcb.2c01702</a>
+      </li>
+    </ul>
 
+  </div> <!-- /muted -->
 
-
-<!-- Resumo 3.1 com Tabela 3 (Fulvio 2009) -->
-<div class="muted" style="margin-top:10px; text-align:justify; font-size:0.92rem;">
-
-  <strong>Resumo 3.1 (com conferência em Fulvio&nbsp;2009 — Tabela&nbsp;3):</strong><br>
-  Do conjunto pedido (589, 1166, 1295, 2239, 2581, 3380, 3706&nbsp;cm⁻¹), os picos
-  <u>1166, 1295, 2239 e 2581&nbsp;cm⁻¹</u> constam na Tabela&nbsp;3 para N₂O sólido (16&nbsp;K).
-  Já <u>589&nbsp;cm⁻¹</u> não aparece na Tabela&nbsp;3, e <u>3380/3706&nbsp;cm⁻¹</u> não são de N₂O:
-  tratam-se de O–H de H₂O (contaminante), devendo ser referenciadas por literatura
-  específica de gelo d’água.
-
-<!-- Tabela 3 (Fulvio 2009) reformatada — alinhamento à esquerda -->
-<figure style="margin:10px 0; text-align:left;">
-  <figcaption style="font-size:0.9rem; margin-bottom:6px; text-align:left;">
-    <em>Fulvio&nbsp;2009, Tabela&nbsp;3 — Posições de pico no infravermelho do N₂O sólido (16&nbsp;K) e atribuições de modo.</em>
-  </figcaption>
-  <table border="1" cellpadding="6" style="border-collapse:collapse; width:auto; font-size:0.92rem;">
-    <thead style="background:#f5f5f5;">
-      <tr>
-        <th style="text-align:left; width:40%;">Número de onda (cm⁻¹)</th>
-        <th style="text-align:left;">Modo</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>1166</td><td>2ν₂</td></tr>
-      <tr><td>1295</td><td>ν₁</td></tr>
-      <tr><td>2239</td><td>ν₃</td></tr>
-      <tr><td>2469</td><td>ν₁ + 2ν₂</td></tr>
-      <tr><td>2581</td><td>2ν₁</td></tr>
-      <tr><td>2814</td><td>ν₂ + ν₃</td></tr>
-    </tbody>
-  </table>
-  <div style="font-size:0.85rem; color:#555; margin-top:6px; text-align:left;">
-    Fonte: Fulvio&nbsp;et&nbsp;al., <em>Spectrochimica Acta Part A</em> 72 (2009) 1007–1013 (Tabela&nbsp;3).
-  </div>
-</figure>
-
-
-<!-- Fechamento 3.1 — com literatura para as bandas fora da Tabela 3 -->
-<p style="margin-top:8px; text-align:justify;">
-  Assim, nesta amostra não irradiada, os picos “pai” confirmados para N₂O pela Tabela&nbsp;3 de Fulvio&nbsp;(2009) são:
-  <strong>1166</strong> (2ν₂), <strong>1295</strong> (ν₁), <strong>2239</strong> (ν₃) e <strong>2581</strong> (2ν₁) cm⁻¹.
-  As bandas restantes exigem literatura complementar: <strong>589&nbsp;cm⁻¹</strong> é o modo de <em>flexão</em> (ν₂) do N₂O
-  (fora do escopo da Tabela&nbsp;3 de Fulvio), e <strong>3380</strong>/<strong>3706&nbsp;cm⁻¹</strong> correspondem a O–H de
-  H₂O <em>contaminante</em> — respectivamente, a larga banda de estiramento do gelo amorfo (~3200–3400&nbsp;cm⁻¹) e o O–H “livre”
-  (<em>dangling</em>) de superfície (~3696–3720&nbsp;cm⁻¹), ambos amplamente reportados na literatura de gelo de água.
-</p>
-
-<!-- Referências (com links) -->
-<ul class="muted" style="margin:6px 0 0 18px; font-size:0.9rem; text-align:left;">
-  <li>
-    <strong>Fulvio, D. et al., 2009</strong> — N₂O sólido (16&nbsp;K): índices, densidade e <em>band strengths</em>;
-    Tabela&nbsp;3 (1166/1295/2239/2581 cm⁻¹).
-    <a href="https://jupiter.chem.uoa.gr/thanost/papers/papers1/SpectrochimActaA_72%282009%291007.pdf" target="_blank" rel="noopener">PDF</a> ·
-    <a href="https://doi.org/10.1016/j.saa.2008.12.030" target="_blank" rel="noopener">DOI: 10.1016/j.saa.2008.12.030</a>
-  </li>
-  <li>
-    <strong>Plyler, E.K.; Tidwell, E.D.; Maki, A.G., 1964</strong> — Espectro IR do N₂O; ν₂ (flexão) ≈ 588.78&nbsp;cm⁻¹.
-    <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC5325172/" target="_blank" rel="noopener">Acesso livre (NIST/PMC)</a>
-  </li>
-  <li>
-    <strong>Buch, V.; Devlin, J.P., 1991</strong> — O–H “dangling” em gelo amorfo (~3.70&nbsp;µm).
-    <a href="https://ui.adsabs.harvard.edu/abs/1991JChPh..94.4091B/abstract" target="_blank" rel="noopener">Resumo (ADS)</a>
-  </li>
-  <li>
-    <strong>Maté, B. et al., 2021</strong> — Revisão/estudo sobre bandas “dangling” &gt;3600&nbsp;cm⁻¹ em misturas CH₄/H₂O.
-    <a href="https://pubs.rsc.org/en/content/articlehtml/2021/cp/d1cp00291k" target="_blank" rel="noopener">RSC (artigo)</a>
-  </li>
-  <li>
-    <strong>Ikemoto, Y. et al., 2022</strong> — Distribuição do estiramento O–H (~3650–3200&nbsp;cm⁻¹) e configuração HB.
-    <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC9189834/" target="_blank" rel="noopener">Acesso livre (PMC)</a> ·
-    <a href="https://doi.org/10.1021/acs.jpcb.2c01702" target="_blank" rel="noopener">DOI: 10.1021/acs.jpcb.2c01702</a>
-  </li>
-</ul>
+</div> <!-- /Resposta 3.1 -->
+  
 
 
-</div>
-
-
-
-
+  
   
   
   
