Add integrated areas for non-irradiated sample peaks
Added a section for integrated areas of non-irradiated sample peaks with detailed data in a table format.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -985,14 +985,79 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
   
   
-  
-  
-  
-  
-  
-  <div class="enunciado" style="text-align:justify;">
-  3.2 - Determinar as áreas das bandas correspondentes a estes picos.
+  <!-- ===================== RESPOSTA 3.2 — Áreas (amostra não irradiada) ===================== -->
+<div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
+  <h4 style="margin:0 0 10px 0;">Resposta 3.2 — Áreas integradas dos picos “Pai” (não irradiada)</h4>
+
+  <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:900px; margin:auto; font-size:0.95rem;">
+    <thead style="background:#f5f5f5;">
+      <tr>
+        <th style="text-align:left;">Pico (cm⁻¹)</th>
+        <th style="text-align:left;">Janela usada</th>
+        <th style="text-align:left;">Modo/atribuição</th>
+        <th style="text-align:right;">Área integrada<br>(abs·cm⁻¹)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><strong>589</strong></td>
+        <td>580–592</td>
+        <td>ν₂ (flexão) do N₂O</td>
+        <td style="text-align:right;"><strong>4,5475</strong></td>
+      </tr>
+      <tr>
+        <td><strong>1166</strong></td>
+        <td>1155–1178</td>
+        <td>2ν₂ (N₂O)</td>
+        <td style="text-align:right;"><strong>259,3223</strong></td>
+      </tr>
+      <tr>
+        <td><strong>1295</strong></td>
+        <td>1280–1305</td>
+        <td>ν₁ (N–N, N₂O)</td>
+        <td style="text-align:right;"><strong>72,2054</strong></td>
+      </tr>
+      <tr>
+        <td><strong>2239</strong></td>
+        <td>~2224–2243</td>
+        <td>ν₃ (anti-sim., N₂O)</td>
+        <td style="text-align:right;"><strong>45,1291</strong></td>
+      </tr>
+      <tr>
+        <td><strong>2581</strong></td>
+        <td>2565–2600</td>
+        <td>2ν₁ / ν₁+ν₂ (N₂O)</td>
+        <td style="text-align:right;"><strong>244,0410</strong></td>
+      </tr>
+      <tr>
+        <td><strong>3380</strong></td>
+        <td>3376–3382</td>
+        <td>O–H (H₂O, banda larga — contaminante)</td>
+        <td style="text-align:right;"><strong>4,2269</strong></td>
+      </tr>
+      <tr>
+        <td><strong>3706</strong></td>
+        <td>3706,5–3704,5</td>
+        <td>O–H “dangling” (superfície H₂O — contaminante)</td>
+        <td style="text-align:right;"><strong>0,6141</strong></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <p class="muted" style="margin:10px 0 0; text-align:justify;">
+    Notas: (i) 3380 e 3706 cm⁻¹ foram integradas diretamente (uma única banda); (ii) as demais janelas apresentaram múltiplos componentes Voigt — somei a coluna <em>Area</em> de todos os picos dentro da janela.
+  </p>
 </div>
+
+  
+  
+
+
+
+
+
+
+  
 
 <div class="enunciado" style="text-align:justify;">
   3.3 - Determinar as áreas das bandas correspondentes a estes picos para as diversas fluências de irradiação.
