--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -985,11 +985,12 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
   
   
-  <!-- ===================== RESPOSTA 3.2 — Áreas (amostra não irradiada) ===================== -->
-<div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
+<!-- ===================== RESPOSTA 3.2 — Áreas (amostra não irradiada) — ESTILO AZUL ===================== -->
+<div class="enunciado" style="padding:16px; margin:12px 0;">
+
   <h4 style="margin:0 0 10px 0;">Resposta 3.2 — Áreas integradas dos picos “Pai” (não irradiada)</h4>
 
-  <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:900px; margin:auto; font-size:0.95rem;">
+  <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:900px; margin:auto; font-size:0.95rem; background:#fff;">
     <thead style="background:#f5f5f5;">
       <tr>
         <th style="text-align:left;">Pico (cm⁻¹)</th>
@@ -1044,13 +1045,18 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     </tbody>
   </table>
 
-  <p class="muted" style="margin:10px 0 0; text-align:justify;">
-    Notas: (i) 3380 e 3706 cm⁻¹ foram integradas diretamente (uma única banda); (ii) as demais janelas apresentaram múltiplos componentes Voigt — somei a coluna <em>Area</em> de todos os picos dentro da janela.
-  </p>
+  <!-- Como calculei a área integrada a partir dos PDFs -->
+  <div class="muted" style="margin:10px 0 0; text-align:justify;">
+    <strong>Como calculei a área integrada a partir dos PDFs do relatório:</strong><br>
+    1) Em cada PDF (uma janela espectral), usei a <em>tabela “Statistics/Peak List”</em> exportada do OMNIC.<br>
+    2) Somei a coluna <strong>Area</strong> de <u>todos os componentes</u> listados <u>dentro da janela</u> (ex.: 1155–1178 cm⁻¹ para 1166 cm⁻¹).<br>
+    3) Para as bandas de <strong>3380</strong> e <strong>3706 cm⁻¹</strong>, o arquivo apresenta <em>integração direta única da janela</em>; usei o valor reportado como área integrada.<br>
+    4) As áreas estão em <em>absorbance·cm⁻¹</em>, coerentes com a integração de <em>A(ν̃)</em> após correção de <em>baseline</em> no OMNIC.<br>
+    <em>Observação:</em> estes valores reproduzem exatamente o que está nos PDFs (capturas do OMNIC); não houve reprocessamento adicional fora do software.
+  </div>
+
 </div>
 
-  
-  
 
 
 
