--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -983,8 +983,12 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   
 
 
-  
-  
+
+<div class="enunciado" style="text-align:justify;">
+  3.2 - Determinar as áreas das bandas correspondentes a estes picos.
+</div>
+
+
 <!-- ===================== RESPOSTA 3.2 — Áreas (amostra não irradiada) — ESTILO AZUL ===================== -->
 <div class="enunciado" style="padding:16px; margin:12px 0;">
 
@@ -1046,16 +1050,17 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   </table>
 
   <!-- Como calculei a área integrada a partir dos PDFs -->
-  <div class="muted" style="margin:10px 0 0; text-align:justify;">
-    <strong>Como calculei a área integrada a partir dos PDFs do relatório:</strong><br>
-    1) Em cada PDF (uma janela espectral), usei a <em>tabela “Statistics/Peak List”</em> exportada do OMNIC.<br>
-    2) Somei a coluna <strong>Area</strong> de <u>todos os componentes</u> listados <u>dentro da janela</u> (ex.: 1155–1178 cm⁻¹ para 1166 cm⁻¹).<br>
-    3) Para as bandas de <strong>3380</strong> e <strong>3706 cm⁻¹</strong>, o arquivo apresenta <em>integração direta única da janela</em>; usei o valor reportado como área integrada.<br>
-    4) As áreas estão em <em>absorbance·cm⁻¹</em>, coerentes com a integração de <em>A(ν̃)</em> após correção de <em>baseline</em> no OMNIC.<br>
-    <em>Observação:</em> estes valores reproduzem exatamente o que está nos PDFs (capturas do OMNIC); não houve reprocessamento adicional fora do software.
-  </div>
+  <p class="muted" style="margin:10px 0 0; text-align:justify;">
+    <strong>Como calculei a área integrada a partir dos PDFs do relatório:</strong>
+    em cada PDF (uma janela espectral), somei a coluna <strong>Area</strong> de todos os
+    componentes listados na <em>Statistics/Peak List</em> do OMNIC; para 3380 e 3706&nbsp;cm⁻¹,
+    usei a <em>integração direta da janela</em> reportada no arquivo. As áreas estão em
+    <em>absorbance·cm⁻¹</em> após correção de <em>baseline</em> no OMNIC.
+  </p>
 
 </div>
+
+
 
 
 
