Enhance styling for non-irradiated sample areas section
Updated the styling of the section for non-irradiated sample areas.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -990,8 +990,8 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 
 <!-- ===================== RESPOSTA 3.2 — Áreas (amostra não irradiada) — ESTILO AZUL ===================== -->
-<div class="enunciado" style="padding:16px; margin:12px 0;">
-
+<div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
+  
   <h4 style="margin:0 0 10px 0;">Resposta 3.2 — Áreas integradas dos picos “Pai” (não irradiada)</h4>
 
   <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:900px; margin:auto; font-size:0.95rem; background:#fff;">
