--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -992,7 +992,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 <!-- ===================== RESPOSTA 3.2 — Áreas (amostra não irradiada) — ESTILO AZUL ===================== -->
 <div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
   
-  <h4 style="margin:0 0 10px 0;">Resposta 3.2 — Áreas integradas dos picos “Pai” (não irradiada)</h4>
+  <h4 style="margin:0 0 10px 0;">Resposta 3.2</h4>
 
   <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:900px; margin:auto; font-size:0.95rem; background:#fff;">
     <thead style="background:#f5f5f5;">
@@ -1050,13 +1050,15 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   </table>
 
   <!-- Como calculei a área integrada a partir dos PDFs -->
-  <p class="muted" style="margin:10px 0 0; text-align:justify;">
-    <strong>Como calculei a área integrada a partir dos PDFs do relatório:</strong>
-    em cada PDF (uma janela espectral), somei a coluna <strong>Area</strong> de todos os
-    componentes listados na <em>Statistics/Peak List</em> do OMNIC; para 3380 e 3706&nbsp;cm⁻¹,
-    usei a <em>integração direta da janela</em> reportada no arquivo. As áreas estão em
-    <em>absorbance·cm⁻¹</em> após correção de <em>baseline</em> no OMNIC.
-  </p>
+<p class="muted" style="margin:10px 0 0; text-align:justify;">
+  <strong>Como calculei a área integrada a partir dos PDFs do relatório:</strong>
+  em cada PDF (uma janela espectral), somei a coluna <strong>Area</strong> de todos os
+  <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/Clipboard%203.3.txt" target="_blank" rel="noopener">clipboards exportados</a>
+  (componentes listados na <em>Statistics/Peak List</em> do OMNIC); para 3380 e 3706&nbsp;cm⁻¹,
+  usei a <em>integração direta da janela</em> reportada no arquivo. As áreas estão em
+  <em>absorbance·cm⁻¹</em> após correção de <em>baseline</em> no OMNIC.
+</p>
+
 
 </div>
 
