Refactor layout for c1, c2, c3 sections

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -233,27 +233,40 @@
 </div>
 
 
-<!-- c1, c2, c3 na ordem pedida -->
+<!-- c1, c2, c3 — layout em linha (responsivo) -->
 <div class="print-area" style="text-align:center;">
+  <div style="display:flex; gap:14px; flex-wrap:wrap; justify-content:center; align-items:flex-start;">
 
-  <strong>(c1) Janela 1310–1280&nbsp;cm⁻¹</strong><br>
-  <img
-    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c1.png?raw=1"
-    style="max-width:100%;height:auto;display:block;margin:8px auto;"
-    alt="c1: Peak Resolve na janela 1310 - 1280 cm⁻¹.">
+    <!-- c1 -->
+    <div style="flex:1 1 320px; max-width:520px;">
+      <div style="font-weight:600;">(c1) Janela 1310–1280&nbsp;cm⁻¹</div>
+      <img
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c1.png?raw=1"
+        style="width:100%; height:auto; display:block; margin:8px auto; border:1px solid #ddd; background:#fff; padding:2px; border-radius:6px;"
+        alt="c1: Peak Resolve na janela 1310–1280 cm⁻¹.">
+    </div>
 
-  <strong>(c2) Janela 2600–2565&nbsp;cm⁻¹</strong><br>
-  <img
-    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c2.png?raw=1"
-    style="max-width:100%;height:auto;display:block;margin:8px auto;"
-    alt="c2: Peak Resolve na janela 2600 - 2565 cm⁻¹.">
+    <!-- c2 -->
+    <div style="flex:1 1 320px; max-width:520px;">
+      <div style="font-weight:600;">(c2) Janela 2600–2565&nbsp;cm⁻¹</div>
+      <img
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c2.png?raw=1"
+        style="width:100%; height:auto; display:block; margin:8px auto; border:1px solid #ddd; background:#fff; padding:2px; border-radius:6px;"
+        alt="c2: Peak Resolve na janela 2600–2565 cm⁻¹.">
+    </div>
 
-  <strong>(c3) Janela 2300–2170&nbsp;cm⁻¹</strong><br>
-  <img
-    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c3.png?raw=1"
-    style="max-width:100%;height:auto;display:block;margin:8px auto;"
-    alt="c3: Peak Resolve na janela 2300 - 2170 cm⁻¹.">
+    <!-- c3 -->
+    <div style="flex:1 1 320px; max-width:520px;">
+      <div style="font-weight:600;">(c3) Janela 2300–2170&nbsp;cm⁻¹</div>
+      <img
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c3.png?raw=1"
+        style="width:100%; height:auto; display:block; margin:8px auto; border:1px solid #ddd; background:#fff; padding:2px; border-radius:6px;"
+        alt="c3: Peak Resolve na janela 2300–2170 cm⁻¹.">
+    </div>
+
+  </div>
 </div>
+
 
 <!-- Tabela de áreas e N (c1, c2, c3) -->
 <class="print-area" style="text-align:center;">
