Fix HTML formatting for print area section

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1203,7 +1203,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   <br>4.3.1 - Gráfico Área X  fluência
   <br>4.3.2 - Gráfico Densidade de coluna (N)  X fluência
 </div>
-<div class="print-area" style="text-align:justify;"><strong>Print 8</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Filho”)</em></div>
+<div class="print-area" style="text-align:justify;"><strong>Print 8</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Filho”)</em>
 
   
 
