Remove empty div from FTIR analysis HTML

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -789,7 +789,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   </p>
 
 </div>
-
+</div>
 
 <div style="height:24px;"></div>
 
