Format HTML for section 3 and add spacing

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -793,7 +793,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 <div style="height:24px;"></div>
 
-
+<div class="enunciado" style="margin:16px 0;"></div>
 
 <!-- ===================== SEÇÃO 3 (texto original, apenas formatado/justificado) ===================== -->
 
@@ -1183,7 +1183,9 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 <div class="enunciado" style="text-align:justify;">
   3.5 - Comparar os resultados obtidos dos gráficos com o trabalho do Fulvio 2009[5], Figura 4b do artigo.
 </div>
-
+    
+</div>
+  
 <!-- ===================== SEÇÃO 4 (texto original, apenas formatado/justificado) ===================== -->
 <h3 style="text-align:justify;">4) Análise de bandas Filho para a amostra irradiada com diversos valores de fluência</h3>
 
