--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -791,9 +791,10 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 </div>
 </div>
 
-<div style="height:24px;"></div>
 
-<div class="enunciado" style="margin:16px 0;"></div>
+
+<div class="resposta"></div>  <!-- pontilhado neutro para separar -->
+<div class="spacer-24"></div> <!-- respiro opcional -->
 
 <!-- ===================== SEÇÃO 3 (texto original, apenas formatado/justificado) ===================== -->
 
@@ -1185,7 +1186,11 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 </div>
     
 </div>
-  
+
+
+
+
+
 <!-- ===================== SEÇÃO 4 (texto original, apenas formatado/justificado) ===================== -->
 <h3 style="text-align:justify;">4) Análise de bandas Filho para a amostra irradiada com diversos valores de fluência</h3>
 
